<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_principal"
    android:visibility="visible"
    tools:context=".Ball" >

    <!-- android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" -->
    

    <ImageView
        android:id="@+id/about_app_erizo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/introImage"
        android:src="@drawable/bubble_title" />

    <ImageButton
        android:id="@+id/newGameImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/newGameStr"
        android:src="@drawable/exploding_newgame" />

    <ImageButton
        android:id="@+id/highScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/high_score_button"
        android:src="@drawable/exploding_high_score" />

    <ImageButton
        android:id="@+id/btnExitImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/exitGame"
        android:src="@drawable/exploding_exit" />

    <ImageButton
        android:id="@+id/btnSettingsImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/animacion_burbuja_settings" />

</RelativeLayout>
